@@ -133,7 +133,7 @@ public class JdbcCollector implements ServiceCollector {
     public void initialize(CollectionAgent agent, Map<String, Object> parameters) {        
         LOG.debug("initialize: Initializing JDBC collection for agent: {}", agent);
         
-        Integer scheduledNodeKey = new Integer(agent.getNodeId());
+        Integer scheduledNodeKey = Integer.valueOf(agent.getNodeId());
         JdbcAgentState nodeState = m_scheduledNodes.get(scheduledNodeKey);
 
         if (nodeState != null) {
@@ -156,7 +156,7 @@ public class JdbcCollector implements ServiceCollector {
 
     @Override
     public void release(CollectionAgent agent) {
-        Integer scheduledNodeKey = new Integer(agent.getNodeId());
+        Integer scheduledNodeKey = Integer.valueOf(agent.getNodeId());
         JdbcAgentState nodeState = m_scheduledNodes.get(scheduledNodeKey);
         if (nodeState != null) {
             m_scheduledNodes.remove(scheduledNodeKey);
@@ -195,6 +195,9 @@ public class JdbcCollector implements ServiceCollector {
             // Create a new collection set.
             JdbcCollectionSet collectionSet = new JdbcCollectionSet();
             collectionSet.setCollectionTimestamp(new Date());
+
+            // Creating a single resource object, because all node-level metric must belong to the exact same resource.
+            final JdbcSingleInstanceCollectionResource nodeResource = new JdbcSingleInstanceCollectionResource(agent);
         
             // Cycle through all of the queries for this collection
             for(JdbcQuery query : collection.getQueries()) {
@@ -233,14 +236,13 @@ public class JdbcCollector implements ServiceCollector {
                         boolean singleInstance = (results.getRow()==1)?true:false;
                         results.beforeFirst();
                         
-                        
                         // Iterate through each row.
                         while(results.next() ) {
                             JdbcCollectionResource resource = null;
                             
                             // Create the appropriate resource container.
                             if(singleInstance) {
-                                resource = new JdbcSingleInstanceCollectionResource(agent);
+                                resource = nodeResource;
                             } else {
                                 // Retrieve the name of the column to use as the instance key for multi-row queries.
                                 String instance = results.getString(query.getInstanceColumn());
